--- a/MvcCoreSession/Views/Shared/_Layout.cshtml
+++ b/MvcCoreSession/Views/Shared/_Layout.cshtml
@@ -26,6 +26,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="EjemploSession" asp-action="Index">Session</a>
                         </li>
+                        <li class="nav-item">
+                            @{
+                                int num = 0;
+                                List<Mascota> mascotas = Context.Session.GetObject<List<Mascota>>("MASCOTALISTGENERIC");
+                                if(mascotas != null)
+                                {
+                                    num = mascotas.Count;
+                                }
+                            }
+                            Mascotas almacenadas: @num;
+                        </li>
                     </ul>
                 </div>
             </div>
